fixed category visibility

--- a/src/components/category/category-component.css
+++ b/src/components/category/category-component.css
@@ -46,4 +46,5 @@
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   overflow: hidden;
+  z-index: 1;
 }
